# sst-dam-benchmarks

./: .gitignore  driver.py
common/: workloads.h
dam/: Cargo.toml  build.rs
dam/src/: main.rs
sst/src/: Makefile  sstbench.cc  sstbench.h
sst/tests/: benchmark.py  simple.py  simpleElementExample-test-001.py  testsuite_default_sstexternalelement.py
